--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
-REACT_APP_BACKEND_URL=https://aechat-reborn.preview.emergentagent.com
+REACT_APP_BACKEND_URL=https://aeterna-chat.onrender.com
 WDS_SOCKET_PORT=443
 REACT_APP_ENABLE_VISUAL_EDITS=false
 ENABLE_HEALTH_CHECK=false
